--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h2 {
   padding: .1em 0;
   border-top: 5px solid;
   border-bottom: 5px solid;
-  margin-bottom: 0.5em;
+  margin-bottom: 1em;
   line-height: 1;
 }
 
@@ -55,18 +55,30 @@ h3 {
   margin-bottom: 0.5em;
 }
 
+p {
+  margin-bottom: 1em;
+}
+
 main {
   max-width: 1200px;
   margin-inline: auto;
+}
+
+.split-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  gap: 2em;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    gap: 2em;
 }
 
 .section {
   width: 100%;
   max-width: 600px;
   margin-inline: auto;
+  margin-bottom: 4em;
+}
+
+.section.projects {
+  max-width: 100%;
 }
 
 .about img {
@@ -82,17 +94,36 @@ main {
   gap: 2em;
 }
 
+.skills-container > * {
+  width: calc(50% - 2em);
+  border-left: 2px solid;
+  padding-left: 1em;
+}
+
 .skills ul {
   padding: 0;
   list-style: none;
 }
 
+
 .projects-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2em;
+  justify-content: space-between;
+}
+
+.projects-container > * {
+  max-width: 250px;
 }
 
 .project {
+  margin-bottom: 1em;
+}
+
+.project img {
+  max-width: 100%;
+  display: block;
   margin-bottom: 1em;
 }
 
